feat: implement notes
Not great visually, but functionality is there

--- a/ClientApp/src/components/FetchDataDocument.css
+++ b/ClientApp/src/components/FetchDataDocument.css
@@ -1,3 +1,10 @@
 ﻿mark.textHighlight {
     background-color: yellow;
 }
+
+.noteRow {
+    background-color: aliceblue;
+    font-size: small;
+    padding: 0.15rem;
+    text-align: center;
+}
