--- a/CorpusSearch/Pages/_ViewImports.cshtml
+++ b/CorpusSearch/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Codex_API
-@namespace Codex_API.Pages
+﻿@using CorpusSearch
+@namespace CorpusSearch.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
