fix(Browse): make responsive
Add more margin between touch targets

Google search console flagged this page for mobile

--- a/CorpusSearch/Views/Browse/Index.cshtml
+++ b/CorpusSearch/Views/Browse/Index.cshtml
@@ -27,6 +27,19 @@
        padding: 0.15rem;
        text-align: center;
     }
+    .lead {
+       display: inline-block;
+    }
+    @@media only screen and (max-width: 600px) {
+        .lead {
+           margin-bottom: 18px;
+        }
+    }
+    @@media only screen and (min-width: 600px) {
+        .lead {
+           margin-bottom: 6px;
+        }
+    }
     </style>
 </head>
 <body style="padding: 24px">
