--- a/CorpusSearch/Views/Browse/Browse.cshtml
+++ b/CorpusSearch/Views/Browse/Browse.cshtml
@@ -23,21 +23,21 @@
 <body>
 <h1 style="margin: 24px"><a href="/Browse" style="text-decoration: none">⇦</a> @ViewData["Title"]</h1>
 
-<span class="text-center d-flex justify-content-center">
-    <a class="lead font-weight-bold" style="margin: 24px" href="/docs/@ViewData["docId"]">View in Corpus</a>
+<div class="text-center d-flex justify-content-center" style="flex-wrap: wrap; margin-bottom: 20px">
+    <a class="lead font-weight-bold" style="margin-right: 24px; margin-left: 24px; margin-bottom: 6px" href="/docs/@ViewData["docId"]">View in Corpus</a>
     @if (ViewData["GitHubLink"] != null)
     {
-        <a class="lead font-weight-bold" style="margin: 24px" href="@ViewData["GitHubLink"]">Edit on GitHub</a>
+        <a class="lead font-weight-bold" style="margin-right: 24px; margin-left: 24px; margin-bottom: 6px" href="@ViewData["GitHubLink"]">Edit on GitHub</a>
     }
     @if (ViewData["DownloadText"] != null)
     {
-        <a class="lead font-weight-bold" style="margin: 24px" href="@ViewData["DownloadText"]">Download Text (CSV)</a>
+        <a class="lead font-weight-bold" style="margin-right: 24px; margin-left: 24px; margin-bottom: 6px" href="@ViewData["DownloadText"]">Download Text (CSV)</a>
     }
     @if (ViewData["DownloadMetadata"] != null)
     {
-        <a class="lead font-weight-bold" style="margin: 24px" href="@ViewData["DownloadMetadata"]">Download Metadata (JSON)</a>
+        <a class="lead font-weight-bold" style="margin-right: 24px; margin-left: 24px; margin-bottom: 6px" href="@ViewData["DownloadMetadata"]">Download Metadata (JSON)</a>
     }
-</span>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 @{
