--- a/CorpusSearch/Views/Browse/Browse.cshtml
+++ b/CorpusSearch/Views/Browse/Browse.cshtml
@@ -59,7 +59,7 @@
                 {
                     return new[] { x };
                 }
-                return new [] { x.Substring(0, index + 1), x.Substring(index + 1) }.Where(s => !string.IsNullOrEmpty(s));
+                return new [] { x[..(index + 1)], x[(index + 1)..] }.Where(s => !string.IsNullOrEmpty(s));
             })
             .ToList();
     }
@@ -95,7 +95,7 @@
             {
                 <tr class="noteRow">
                 <td colSpan="3">
-                    @foreach (var (note, i) in line.Notes.Split("\\n").SelectMany(SplitNotesToLines).Select((x,i) => (x, i)))
+                    @foreach (var note in line.Notes.Split("\\n").SelectMany(SplitNotesToLines))
                     {
                         <div style="max-width: 75%; margin: auto"> 
                             @note
