fix(Browse): make table equal width

--- a/CorpusSearch/Views/Browse/Browse.cshtml
+++ b/CorpusSearch/Views/Browse/Browse.cshtml
@@ -67,11 +67,11 @@
 
 @* TODO: Add all fields from the JSON here *@
 
-<table class='table table-striped text-center'>
+<table class='table table-striped text-center' style="table-layout: fixed; width: 100%">
 <thead>
 <tr>
-    <th class="text-center">Manx</th>
-    <th class="text-center">English</th>
+    <th class="text-center" style="width: 50%">Manx</th>
+    <th class="text-center" style="width: 50%">English</th>
 </tr>
 </thead>
     <tbody>
