left-justify text on 'Browse'
Fixes #133

--- a/CorpusSearch/Views/Browse/Browse.cshtml
+++ b/CorpusSearch/Views/Browse/Browse.cshtml
@@ -18,6 +18,9 @@
        padding: 0.15rem;
        text-align: center;
     }
+    table tbody tr td {
+        text-align: justify;
+    }
     </style>
 </head>
 <body>
