fix(Browse): Fix "back"
Tags -> Item -> Back went to /Browse, not /Tags

--- a/CorpusSearch/Views/Browse/Browse.cshtml
+++ b/CorpusSearch/Views/Browse/Browse.cshtml
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-<h1 style="margin: 24px"><a href="/Browse" style="text-decoration: none">⇦</a> @ViewData["Title"]</h1>
+<h1 style="margin: 24px"><a href="javascript:history.back()" style="text-decoration: none">⇦</a> @ViewData["Title"]</h1>
 
 <div class="text-center d-flex justify-content-center" style="flex-wrap: wrap; margin-bottom: 20px">
     <a class="lead font-weight-bold" style="margin-right: 24px; margin-left: 24px; margin-bottom: 6px" href="/docs/@ViewData["docId"]">View in Corpus</a>
