fix(Browse): Don't justify notes

--- a/CorpusSearch/Views/Browse/Browse.cshtml
+++ b/CorpusSearch/Views/Browse/Browse.cshtml
@@ -21,6 +21,9 @@
     table tbody tr td {
         text-align: justify;
     }
+    table tbody tr.noteRow td {
+        text-align: inherit;
+    }
     </style>
 </head>
 <body>
