--- a/CorpusSearch/ClientApp/src/components/NavMenu.css
+++ b/CorpusSearch/ClientApp/src/components/NavMenu.css
@@ -7,9 +7,48 @@
 html {
   font-size: 14px;
 }
-@media (min-width: 768px) {
-  html {
+
+.titleText {
+  font-size: 24px;
+  font-family: Georgia, serif;
+  vertical-align: middle;
+}
+
+
+
+@media (max-width: 576px) {
+  .corpusImageLarge {
+    display: none;
+  }
+  .corpusImageSmall {
+    display: inline-block;
+  }
+}
+
+@media (min-width: 576px) {
+  .corpusImageLarge {
+    display: block;
+  }
+  .corpusImageSmall {
+    display: none;
+  }
+}
+
+@media (max-width: 420px) {
+  .titleText {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 378px) {
+  .titleText {
     font-size: 16px;
+  }
+}
+
+@media (max-width: 378px) {
+  .titleText {
+    display: none;
   }
 }
 
