--- a/CorpusSearch/Views/Cregeen/Index.cshtml
+++ b/CorpusSearch/Views/Cregeen/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CorpusSearch.Model.Dictionary;
-@using CorpusSearch.Service;
+@using CorpusSearch.Service.Dictionaries
 @{
     ViewData["Title"] = "Index";
 }
