center tagline + bold number of words

--- a/CorpusSearch/ClientApp/src/components/Home.css
+++ b/CorpusSearch/ClientApp/src/components/Home.css
@@ -60,9 +60,11 @@ th {
 }
 
 .homeText {
-    margin-top: 10px;
-    font-size: large;
+    /** Done for Firefox */
     display: flex;
     flex-direction: column;
+    
+    margin-top: 10px;
+    font-size: large;
     align-content: center;
 }
