--- a/CorpusSearch/ClientApp/src/components/NavMenu.css
+++ b/CorpusSearch/ClientApp/src/components/NavMenu.css
@@ -64,3 +64,8 @@ html {
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
+
+.noLinkColor, .noLinkColor:active, .noLinkColor:visited {
+  color: inherit;
+  text-decoration: inherit;
+}
