request: make notes text smaller

--- a/CorpusSearch/ClientApp/src/components/DocumentView.css
+++ b/CorpusSearch/ClientApp/src/components/DocumentView.css
@@ -8,7 +8,7 @@ mark.textHighlightAlternate {
 
 .noteRow {
     background-color: aliceblue;
-    font-size: small;
+    font-size: x-small;
     padding: 0.15rem;
     text-align: center;
 }
