chore(lint): use collection expressions
Now we're only on .net8, this is allowed

Automated change by Rider

--- a/CorpusSearch/Views/Browse/Browse.cshtml
+++ b/CorpusSearch/Views/Browse/Browse.cshtml
@@ -81,7 +81,7 @@
 </tr>
 </thead>
     <tbody>
-        @foreach (var line in ViewData["Lines"] as List<DocumentLine> ?? new List<DocumentLine>())
+        @foreach (var line in ViewData["Lines"] as List<DocumentLine> ?? [])
         {
             <tr>
                 <td>
