--- a/CorpusSearch/Pages/_ViewImports.cshtml
+++ b/CorpusSearch/Pages/_ViewImports.cshtml
@@ -1,3 +1,2 @@
-﻿@using CorpusSearch
-@namespace CorpusSearch.Pages
+﻿@namespace CorpusSearch.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
